--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Ye
+last: Wang
+watiam: Y2886WAN
+student: 20730349
+email: y2886wang@uwaterloo.ca
 ...
